Mobius Forensic Toolkit 2.23

Mobius Forensic Toolkit 2.22
	* app-ares: Improved evidence tags
	* app-ares: Changed to save remote-party-shared-file evidences
	* app-chromium: Improved evidence tags
	* app-emule: Improved evidence tags
	* app-emule: Changed to save remote-party-shared-file evidences
	* app-emule: Added new class vfs_processor_impl
	* app-emule: Added new class profile
	* app-emule: Added support for aMule
	* app-emule: Removed evidence_loader_impl class
	* app-emuletorrent: Improved evidence tags
	* app-emuletorrent: Changed to save remote-party-shared-file evidences
	* app-emuletorrent: Added new class vfs_processor_impl
	* app-emuletorrent: Added new class profile
	* app-emuletorrent: Removed evidence_loader_impl class
	* app-shareaza: Improved evidence tags
	* app-shareaza: Changed to save remote-party-shared-file evidences
	* app-shareaza: Added new class vfs_processor_impl
	* app-shareaza: Added new class profile
	* app-shareaza: Removed evidence_loader_impl class
	* app-utorrent: Added support for uTorrent Web
	* app-utorrent: Improved evidence tags
	* app-utorrent: Changed to save remote-party-shared-file evidences
	* evidence-viewer: Changed evidence type "P2P Remote File" to "Remote Party Shared File"
	* libmobius_core: Improved data::pod::bool operator to accept integer values
	* libmobius_core: Improved file_decoder::torrent to retrieve peers' data
	* libmobius_core: Added new method pod::map::get_list<T>
	* libmobius_core: Added new method pod::map::get_map
	* libmobius_core: Added new method pod::map::pop_list<T>
	* libmobius_core: Added new method pod::map::pop_map
	* libmobius_framework: Removed class evidence_loader
	* libmobius_framework: Removed class evidence_loader_impl_base
	* libmobius_framework: Removed class evidence_loader_impl_null
	* libmobius_framework: Added new function get_username_from_path
	* libmobius_python: Removed class framework.evidence_loader