@@ -8,6 +8,7 @@ scope=users	# all = all folders, users = only users folders and subfolders
 [processors]
 app-ares
 app-chromium
+app-dcpp
 app-emule
 app-emuletorrent
 app-skype
