@@ -1,4 +1,6 @@
 Mobius Forensic Toolkit 2.23
+	* Added new C++ extension called "app-dcpp"
+	* libmobius_core: Improved error handling on pod::map::pop_map function
 
 Mobius Forensic Toolkit 2.22
 	* app-ares: Improved evidence tags
